--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
               <label>DESCRIPTION: </label>
               <textarea spellcheck="false"></textarea>
             </div>
+            <div class="row summarize">
+              <label>SUMMARIZED: </label>
+              <textarea spellcheck="false"></textarea>
+            </div>
             <button></button>
           </form>
         </div>
